Sophisticated Business: Fix the cover headings alignment

--- a/sophisticated-business/sass/blocks/_blocks.scss
+++ b/sophisticated-business/sass/blocks/_blocks.scss
@@ -569,6 +569,18 @@
 
 		h1, h2, h3, h4, h5, h6 {
 			font-weight: 700;
+
+			&.has-text-align-left {
+				text-align: left;
+			}
+
+			&.has-text-align-center {
+				text-align: center;
+			}
+
+			&.has-text-align-right {
+				text-align: right;
+			}
 		}
 
 		h1 {
