--- a/sophisticated-business/style-editor.css
+++ b/sophisticated-business/style-editor.css
@@ -1086,6 +1086,18 @@ figcaption,
   font-weight: 700;
 }
 
+.wp-block-cover .wp-block-cover__inner-container h1.has-text-align-left, .wp-block-cover .wp-block-cover__inner-container h2.has-text-align-left, .wp-block-cover .wp-block-cover__inner-container h3.has-text-align-left, .wp-block-cover .wp-block-cover__inner-container h4.has-text-align-left, .wp-block-cover .wp-block-cover__inner-container h5.has-text-align-left, .wp-block-cover .wp-block-cover__inner-container h6.has-text-align-left {
+  text-align: left;
+}
+
+.wp-block-cover .wp-block-cover__inner-container h1.has-text-align-center, .wp-block-cover .wp-block-cover__inner-container h2.has-text-align-center, .wp-block-cover .wp-block-cover__inner-container h3.has-text-align-center, .wp-block-cover .wp-block-cover__inner-container h4.has-text-align-center, .wp-block-cover .wp-block-cover__inner-container h5.has-text-align-center, .wp-block-cover .wp-block-cover__inner-container h6.has-text-align-center {
+  text-align: center;
+}
+
+.wp-block-cover .wp-block-cover__inner-container h1.has-text-align-right, .wp-block-cover .wp-block-cover__inner-container h2.has-text-align-right, .wp-block-cover .wp-block-cover__inner-container h3.has-text-align-right, .wp-block-cover .wp-block-cover__inner-container h4.has-text-align-right, .wp-block-cover .wp-block-cover__inner-container h5.has-text-align-right, .wp-block-cover .wp-block-cover__inner-container h6.has-text-align-right {
+  text-align: right;
+}
+
 .wp-block-cover .wp-block-cover__inner-container h1 {
   font-size: 2.25em;
 }
