--- a/sophisticated-business/style-rtl.css
+++ b/sophisticated-business/style-rtl.css
@@ -3912,6 +3912,36 @@ body.page .main-navigation {
   font-weight: 700;
 }
 
+.entry .entry-content .wp-block-cover-image h1.has-text-align-left, .entry .entry-content .wp-block-cover-image h2.has-text-align-left, .entry .entry-content .wp-block-cover-image h3.has-text-align-left, .entry .entry-content .wp-block-cover-image h4.has-text-align-left, .entry .entry-content .wp-block-cover-image h5.has-text-align-left, .entry .entry-content .wp-block-cover-image h6.has-text-align-left,
+.entry .entry-content .wp-block-cover h1.has-text-align-left,
+.entry .entry-content .wp-block-cover h2.has-text-align-left,
+.entry .entry-content .wp-block-cover h3.has-text-align-left,
+.entry .entry-content .wp-block-cover h4.has-text-align-left,
+.entry .entry-content .wp-block-cover h5.has-text-align-left,
+.entry .entry-content .wp-block-cover h6.has-text-align-left {
+  text-align: right;
+}
+
+.entry .entry-content .wp-block-cover-image h1.has-text-align-center, .entry .entry-content .wp-block-cover-image h2.has-text-align-center, .entry .entry-content .wp-block-cover-image h3.has-text-align-center, .entry .entry-content .wp-block-cover-image h4.has-text-align-center, .entry .entry-content .wp-block-cover-image h5.has-text-align-center, .entry .entry-content .wp-block-cover-image h6.has-text-align-center,
+.entry .entry-content .wp-block-cover h1.has-text-align-center,
+.entry .entry-content .wp-block-cover h2.has-text-align-center,
+.entry .entry-content .wp-block-cover h3.has-text-align-center,
+.entry .entry-content .wp-block-cover h4.has-text-align-center,
+.entry .entry-content .wp-block-cover h5.has-text-align-center,
+.entry .entry-content .wp-block-cover h6.has-text-align-center {
+  text-align: center;
+}
+
+.entry .entry-content .wp-block-cover-image h1.has-text-align-right, .entry .entry-content .wp-block-cover-image h2.has-text-align-right, .entry .entry-content .wp-block-cover-image h3.has-text-align-right, .entry .entry-content .wp-block-cover-image h4.has-text-align-right, .entry .entry-content .wp-block-cover-image h5.has-text-align-right, .entry .entry-content .wp-block-cover-image h6.has-text-align-right,
+.entry .entry-content .wp-block-cover h1.has-text-align-right,
+.entry .entry-content .wp-block-cover h2.has-text-align-right,
+.entry .entry-content .wp-block-cover h3.has-text-align-right,
+.entry .entry-content .wp-block-cover h4.has-text-align-right,
+.entry .entry-content .wp-block-cover h5.has-text-align-right,
+.entry .entry-content .wp-block-cover h6.has-text-align-right {
+  text-align: left;
+}
+
 .entry .entry-content .wp-block-cover-image h1,
 .entry .entry-content .wp-block-cover h1 {
   font-size: 2.25em;
